--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <title>Bootstrap · The most popular HTML, CSS, and JS library in the world.</title>
 
-<link rel="canonical" href="https://getbootstrap.com/">
+<link rel="canonical" href="https://mcccd-web.github.io/">
 
 
 
